pool coefficients BPQ- Depression
@DominiqueMakowski I am not sure this is correct

--- a/analysis/figures/table2.tex
+++ b/analysis/figures/table2.tex
@@ -1,4 +1,4 @@
-\begin{table}
+\begin{table}[t]
 \fontsize{6.8pt}{8.1pt}\selectfont
 \begin{tabular*}{\linewidth}{@{\extracolsep{\fill}}lrlrr}
 \toprule
