--- a/analysis/study2.qmd
+++ b/analysis/study2.qmd
@@ -287,8 +287,8 @@ data <- rbind(data, pool_coef(with = "ICQ", component="ICQ", name = "ICQ", unequ
 
 data <- rbind(
   data,
-  pool_coef(with = "BPQ_BodyAwareness", component="BPQ", name = "Body Awareness (BPQ)"),
-  pool_coef(with = "BPQ_AutonomicReactivity", component="BPQ", name = "Autonomic Reactivity (BPQ)")
+  pool_coef(with = "BPQ_BodyAwareness", component="BPQ", name = "Body Awareness (BPQ)",unequalrange=TRUE),
+  pool_coef(with = "BPQ_AutonomicReactivity", component="BPQ", name = "Autonomic Reactivity (BPQ)",unequalrange=TRUE)
   )
 ```
 
@@ -305,12 +305,11 @@ data <- rbind(
 
 data <- rbind(
   data,
-  #df2 
-  make_rez(with = "TAS_DIF", component="Alexithymia", name = "Difficulties Identifying Feelings (TAS)"),
-  make_rez(with = "TAS_DDF", component="Alexithymia", name = "Difficulties Describing Feelings (TAS)"),
-  make_rez(with = "TAS_EOT", component="Alexithymia", name = "External Thinking (TAS)"),
-  make_rez(with = "BVAQ_Affective", component="Alexithymia", name = "Affective (BVAQ)"), 
-  make_rez(df2, vars_intero, with = "BVAQ_Cognitive", component="Alexithymia", name = "Cognitive (BVAQ)")
+  pool_coef(with = "TAS_DIF", component="Alexithymia", name = "Difficulties Identifying Feelings (TAS)", unequalrange=TRUE),
+  pool_coef(with = "TAS_DDF", component="Alexithymia", name = "Difficulties Describing Feelings (TAS)", unequalrange=TRUE),
+  pool_coef(with = "TAS_EOT", component="Alexithymia", name = "External Thinking (TAS)",unequalrange=TRUE),
+  pool_coef(with = "BVAQ_Affective", component="Alexithymia", name = "Affective (BVAQ)"), 
+  pool_coef(with = "BVAQ_Cognitive", component="Alexithymia", name = "Cognitive (BVAQ)")
 )
 ```
 
@@ -328,12 +327,12 @@ data <- rbind(
 
 data <- rbind(
   data,
-  make_rez(with = "PHQ2_Sum", component="Mood", name = "Depression (PHQ-2)"),
-  make_rez(with = "PHQ15_Sum", component="Mood", name = "Somatic Concerns (PHQ-15)"), 
-  make_rez(with = "PHQ9_Sum", component="Mood", name = "Depression (PHQ-9)"), 
-  make_rez(with = "BDI_Sum", component="Mood", name = "Depression (BDI)"), 
-  make_rez(with = "PHQ4_Depression", component="Mood", name = "Depression (PHQ-2)"),
-  make_cor(with = "DEP", component = "Mood", name = "Depression (MFQ)")
+  pool_coef(with = "PHQ2_Sum", component="Mood", name = "Depression (PHQ-2)"),
+  pool_coef(with = "PHQ15_Sum", component="Mood", name = "Somatic Concerns (PHQ-15)",unequalrange=TRUE), 
+  pool_coef(with = "PHQ9_Sum", component="Mood", name = "Depression (PHQ-9)"), 
+  pool_coef(with = "BDI_Sum", component="Mood", name = "Depression (BDI)"), 
+  pool_coef(with = "PHQ4_Depression", component="Mood", name = "Depression (PHQ-2)"),
+  pool_coef(with = "DEP", component = "Mood", name = "Depression (MFQ)")
 )
 ```
 
